--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Timesheet Manager</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -40,14 +40,17 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script>
-      if('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('./serviceWorker.js').then((reg) => {
-            console.log('Worker Registered')
-          }).catch((err) => {
-            console.log('Error in service worker registration.')
-          })
-        })
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker
+            .register("./serviceWorker.js")
+            .then((reg) => {
+              console.log("Worker Registered");
+            })
+            .catch((err) => {
+              console.log("Error in service worker registration.");
+            });
+        });
       }
     </script>
   </body>
